fix #89 make scrollbars more obvious

--- a/client/src/main/assets/public/_codemirror_solarized.less
+++ b/client/src/main/assets/public/_codemirror_solarized.less
@@ -32,6 +32,7 @@
 
       div {
         background: @base02;
+        box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.75);
       }
     }
   }
@@ -61,7 +62,7 @@
 
       div {
         background: @base2;
-        box-shadow: 0 0 1px grey inset;
+        box-shadow: 0 0 5px grey inset;
       }
     }
   }
